<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/item_appinfo_llyt_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="12dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <CheckBox
            android:id="@+id/item_apk_cb_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"/>
        
        <ImageView
            android:id="@+id/item_apk_iv_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/item_apk_cb_check"
            tools:src="@mipmap/ic_launcher"/>
        
        <TextView
            android:id="@+id/item_apk_tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/item_apk_iv_icon"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="app name"/>
        
        <TextView
            android:id="@+id/item_apk_tv_install"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/install"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/item_apk_tv_install"
            android:textColor="@color/white"
            android:textSize="12sp"/>
        
        <TextView
            android:id="@+id/item_apk_tv_uninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/item_apk_tv_install"
            android:background="@drawable/uninstall"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/item_apk_tv_uninstall"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </RelativeLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_white"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/item_apk_tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            tools:text="@string/item_apk_tv_version"/>
        
        <TextView
            android:id="@+id/item_apk_tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/item_apk_tv_version"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/item_apk_tv_size"/>
        
        <TextView
            android:id="@+id/item_apk_tv_channel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:gravity="right"
            android:textStyle="bold"
            tools:text="@string/item_apk_tv_channel"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/item_apk_tv_apk_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/gray"
        android:textSize="12sp"
        tools:text="@string/item_apk_tv_apk_name"/>
</LinearLayout>

